# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
docs/: architecture.md  changelog.md  manual.md  requirements.md  tests.md  working-hours.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: matkakortti.md  monopoli.md  polttoaine.md
src/: competition.py  competitor.py  index.py
src/assets/: html_export_template.html  result_list_template.html  start_list_template.html
src/entities/: competition.py  competitor.py
src/repositories/: competition_repository.py
src/services/: exporting.py  login.py  request.py  timedelta_format.py
src/tests/: competition_repository_test.py  competition_test.py  competitor_test.py  exporting_test.py  login_test.py  request_test.py  timedelta_format_test.py
src/ui/: competition.py  competitor_form.py  exporting.py  login.py  menu.py  timer.py  ui.py
