[tool.poetry]
name = "timekeeper"
version = "0.1.0"
description = "Timekeeping app for running competitions"
authors = ["PyryL <pyry@pyry.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
invoke = "^1.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pylint = "^2.15.6"
beautifulsoup4 = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
